tests/e2e/scarb/snapshots/e2e__scarb__manifest_diagnostics__watched_manifest_fix_clears_manifest_diagnostics.snap
---
source: tests/e2e/scarb/manifest_diagnostics.rs
description: "// → Scarb.toml\n[package]\nname = \"test_package\"\nversion = \"0.1.0\"\nedition = \"2025_12\"\n\n[dependencies]\ndep = 1\n\n// → src/lib.cairo\nfn main() {}"
expression: "DiagnosticsChangeReport { before_changes, after_changes }"
snapshot_kind: text
---
before_changes:
  diagnostics:
  - url: '[ROOT_URL]Scarb.toml'
    diagnostics:
    - related_code: ''
      diagnostic:
        range:
          start:
            line: 0
            character: 0
          end:
            line: 0
            character: 0
        severity: 1
        source: scarb
        message: |-
          failed to parse manifest at: [ROOT]/Scarb.toml

          Caused by:
              TOML parse error at line 7, column 7
                |
              7 | dep = 1
                |       ^
              invalid type: integer `1`, expected a string or map
after_changes:
  diagnostics: []
